# duroos-watcher

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  customization.yml  source_adapter.yml
.github/workflows/: ci.yml  release.yml  unsigned-alpha-release.yml
docs/: deep-qa-production-handoff-2026-06-20.md  harness-customization.md  production-release-evidence.example.json  release-readiness.md  ui-ux-audit-2026-06-18.md
docs/release/: glib-linux-alpha-blocker-2026-06-21.md  unsigned-alpha-install-notes.md
fixtures/media/: README.md
install/: README.md  linux.sh  macos.sh  windows.ps1
scripts/: audit-release-artifacts.mjs  configure-github-release-signing.mjs  fetch-media-tools.mjs  install-local-macos-app.mjs  prepare-windows-signing.mjs  production-release-gate.mjs  release-check.mjs  release-preflight.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  media-tools.manifest.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  manifest.rs  media_tools.rs  models.rs  phone_access.rs  publisher.rs
src/data/: seed.ts
src/domain/: channelInvite.test.ts  channelInvite.ts  collectionManifest.test.ts  collectionManifest.ts  displayIdentity.test.ts  displayIdentity.ts  jobDisplay.test.ts  jobDisplay.ts  jobQueue.test.ts  jobQueue.ts  libraryView.test.ts  libraryView.ts  onboardingState.test.ts  onboardingState.ts  publisherEndpointReport.test.ts  publisherEndpointReport.ts  sourceAdapters.test.ts  sourceAdapters.ts  sourceManagement.test.ts  sourceManagement.ts  types.ts
src/lib/: notifications.ts  tauri.ts
