[package]
name = "duroos-watcher"
version = "0.1.0"
description = "Local-first study library for educational media"
authors = ["Duroos Watcher"]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "duroos_watcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.23"
secp256k1 = { version = "0.29", features = ["global-context", "rand"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tiny_http = "0.12"
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
walkdir = "2"
zeroize = "1"
tauri-plugin-notification = "2"
